# Tape

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  input.txt  output.txt  start.json
.vsconan/: config.json
include/: Tape.h  TapeSorter.h  TmpTapeGenerator.h
src/: Tape.cpp  TapeSorter.cpp  TmpTapeGenerator.cpp  main.cpp  test.cpp
